[gd_scene load_steps=14 format=1]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Assets/player_foot.png" type="Texture" id=2]
[ext_resource path="res://Assets/player.png" type="Texture" id=3]
[ext_resource path="res://Assets/gun_shot.png" type="Texture" id=4]
[ext_resource path="res://Scripts/camera.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sounds/gun_shot.smp" type="Sample" id=6]
[ext_resource path="res://Assets/Sounds/reload.smp" type="Sample" id=7]
[ext_resource path="res://Assets/Sounds/shot.smp" type="Sample" id=8]

[sub_resource type="Animation" id=1]

resource/name = "base"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/body:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("sprites/body:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("sprites/foot_left:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( -36, 27 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("sprites/foot_left:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("sprites/foot_right:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 36, 27 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("sprites/foot_right:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/body:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("sprites/body:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("sprites/foot_left:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( -36, 27 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("sprites/foot_left:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("sprites/foot_right:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 36, 27 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("sprites/foot_right:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }

[sub_resource type="Animation" id=3]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/body:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("sprites/body:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("sprites/foot_left:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -36, 7 ), Vector2( -36, 40 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("sprites/foot_left:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 0.2, 0.4 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.0, 0.0, 0.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("sprites/foot_right:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 0.2, 0.4 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 36, 40 ), Vector2( 36, 7 ), Vector2( 36, 40 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("sprites/foot_right:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0, 0.2, 0.4 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.0, 0.0, 0.0 ] }

[sub_resource type="SampleLibrary" id=4]

samples/gun_shot = { "db":5.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/reload = { "db":15.0, "pitch":1.0, "sample":ExtResource( 7 ) }
samples/shot = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }

[sub_resource type="Animation" id=5]

resource/name = "shoot"
length = 1.0
loop = false
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/gun_shot:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.03, 0.06 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 1, 1e-05 ), Vector2( 1, 3 ), Vector2( 1, 1e-05 ) ] }

[node name="player" type="KinematicBody2D"]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="sprites" type="Node2D" parent="."]

transform/pos = Vector2( 0, -34 )

[node name="foot_left" type="Sprite" parent="sprites"]

transform/pos = Vector2( -36, 40 )
texture = ExtResource( 2 )

[node name="foot_right" type="Sprite" parent="sprites"]

transform/pos = Vector2( 36, 7 )
texture = ExtResource( 2 )

[node name="body" type="Sprite" parent="sprites"]

texture = ExtResource( 3 )

[node name="gun_shot" type="Sprite" parent="sprites"]

transform/pos = Vector2( 31.6794, -93.8757 )
transform/scale = Vector2( 1, 1e-05 )
texture = ExtResource( 4 )
offset = Vector2( 0.320648, -9.12433 )

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/base = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 5 )

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="gun_anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/shoot = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


